--- a/src/Styles/portafolio-styles.css
+++ b/src/Styles/portafolio-styles.css
@@ -33,6 +33,10 @@
 /* COMPONENTE PROJECTS */
 /* ------------------- */
 
+.projects{
+    width: 85%;
+    margin: auto;
+}
 
 /* ---------------------- */
 /* COMPONENTE TESTIMONIES */
