--- a/src/Styles/portafolio-styles.css
+++ b/src/Styles/portafolio-styles.css
@@ -35,12 +35,73 @@
 
 .projects{
     width: 85%;
+    margin: auto;
+    padding: 40px 0;
+}
+
+.proj-principal{
+    background-image: url('../assets/foto-prueba.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: 80px;
+    box-sizing: border-box;
+    color: var(--color-white);
+    width: 100%;
+    height: 500px;
+}
+.container-card{
+    background-color: var(--color-black);
+}
+
+.proj-secondary{
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.secondary{
+    color: var(--color-white);
+    width: 100%;
+    height: 450px;
+    margin-top: 1rem;
+    box-sizing: border-box;
+}
+.s1{
+    background-image: url('../assets/foto-prueba.png');
+    background-repeat: no-repeat;
+    background-size: cover;    
+}
+.s2{
+    background-image: url('../assets/foto-prueba.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+/* ------------------ */
+/* COMPONENTE SERVICE */
+/* ------------------ */
+
+.container-service{
+    background: rgb(107,107,255);
+    background: linear-gradient(135deg, rgba(107,107,255,1) 0%, rgba(48,48,209,1) 42%, rgba(9,9,121,1) 100%);
+    padding: 80px 0;
+
+}
+
+.service{
+    width: 85%;
+    margin: auto;
 }
 
 /* ---------------------- */
 /* COMPONENTE TESTIMONIES */
 /* ---------------------- */
 
+.container-testimonies{
+    width: 85%;
+    margin: auto;
+    color: var(--color-white);
+    background-color: var(--color-black);
+}
 
 /* ------------------ */
 /* COMPONENTE CONTACT */
@@ -56,6 +117,26 @@
     .navbar .logo{
         width: 30%;
     }
+
+    /* ------------------- */
+    /* COMPONENTE PROJECTS */
+    /* ------------------- */
+
+    .projects{
+        padding: 60px 0;
+    }
+    .proj-principal{
+        height: 500px;
+    }
+    .proj-secondary{
+        height: 450px;
+        margin-top: 56px;
+    }
+    .secondary{
+        width: 45%;
+        height: 100%;
+    }
+    
 }
 
 
@@ -63,4 +144,14 @@
     .navbar .logo{
         width: 10%;
     }
+
+    /* ------------------- */
+    /* COMPONENTE PROJECTS */
+    /* ------------------- */
+
+    .projects{
+        padding: 80px 0;
+    }
+
+    
 }
