--- a/src/Styles/portafolio-styles.css
+++ b/src/Styles/portafolio-styles.css
@@ -105,10 +105,27 @@
 /* ---------------------- */
 
 .container-testimonies{
-    width: 85%;
-    margin: auto;
     color: var(--color-white);
     background-color: var(--color-black);
+    padding: 80px 0;
+}
+
+.testimonies{
+    width: 85%;
+    margin: auto;
+}
+
+.t-name{
+    width: 100%;
+    height: 48px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    font-size: 0.875rem;
+}
+.t-name img{
+    width: auto;
+    height: 100%;
 }
 
 /* ------------------ */
