--- a/src/Styles/general-styles.css
+++ b/src/Styles/general-styles.css
@@ -1,20 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
 
 :root{
-    --font-family-rubik: 'Rubik', sans-serif;
     --font-family: 'Nunito', sans-serif;
     --color-negro: #000000;
     --color-black: #16161A;
     --color-white: #FFFFFE;
-    --color-grey: #94A1B2;
-    --color-green: #2CB67D;
-    --color-red: #EF4565;  
-    --color-purple: #6B47DC;   
     --color-neutral: #232E35;
-    --color-primary: #7F5AF0;
-    --color-secondary: #A786DF;
-    --color-tertiary: #72757E;
 }
 
 *{
@@ -25,4 +16,25 @@
 
 body {
     font-family: var(--font-family);
+}
+body::-webkit-scrollbar {
+    -webkit-appearance: none;
+    background-color: inherit;
+}
+
+body::-webkit-scrollbar:vertical {
+    width:8px;
+}
+body::-webkit-scrollbar:horizontal {
+    height:8px;
+}
+
+body::-webkit-scrollbar-thumb {
+    background: var(--color-black);
+    border-radius: 4px;
+}
+
+body::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background-color: inherit;
 }
