componentes footer casi completados

--- a/src/Styles/general-styles.css
+++ b/src/Styles/general-styles.css
@@ -5,6 +5,7 @@
     --color-negro: #000000;
     --color-black: #16161A;
     --color-white: #FFFFFE;
+    --color-grey: #94A1B2;
     --color-neutral: #232E35;
 }
 
