--- a/src/Styles/portafolio-styles.css
+++ b/src/Styles/portafolio-styles.css
@@ -175,6 +175,24 @@
 /* ----------------- */
 /* COMPONENTE FOOTER */
 /* ----------------- */
+.container-footer{
+    color: var(--color-white);
+    background-color: var(--color-black);
+}
+.footer{
+    width: 85%;
+    margin: auto;
+}
+.footer-logo{
+    height: 40px;
+}
+.social{
+    display: flex;
+    align-items: flex-end;
+}
+.social-icon{
+    color: var(--color-gray);
+}
 
 
 @media (min-width: 728px) {
@@ -224,5 +242,11 @@
         padding: 80px 0;
     }
 
+    /* ----------------- */
+    /* COMPONENTE FOOTER */
+    /* ----------------- */
     
+    .footer{
+        height: 40px;
+    }
 }
